# CertiGuard

./: .gitignore  CertiGuard_Final_Implementation.md  README.md
certiguard/: .gitignore  BUILD_AND_TEST_VAULT.ps1  MANIFEST.in  PROVE_SECURITY.ps1  README.md  certiguard_vm.h  noise_rule_v1.h  pyproject.toml  test_dashboard.py  test_honeypot.py  test_pow.py  test_watermark.py
certiguard/CertiGuard_Professional_SDK_v1.0/: README.txt
certiguard/CertiGuard_Professional_SDK_v1.0/docs/: ARCHITECTURE.md  DEVELOPMENT_METHODOLOGY.md  LAYERS.md
certiguard/CertiGuard_Professional_SDK_v1.0/examples/: build_demo.ps1  certiguard_noise.h  certiguard_vm.h  demo_app_obfuscated.c
certiguard/artifacts/noise_samples/: Noise.cs  README.md  noise_poly.h  (+4 more)
certiguard/docs/: ARCHITECTURE.md  Architecture_Report.tex  DEMO_GUIDE.md  DEMO_TEST_METHODOLOGY.md  DEVELOPMENT_METHODOLOGY.md  DOCUMENTATION.md  HOW_TO_TEST.md  README.md  certiguard_architecture.tex  obfuscation_guide.md
certiguard/examples/: README.md  TheVault.c  build_demo.ps1  certiguard_noise.h  certiguard_vm.h  demo_app.c  demo_app_obfuscated.c  demo_host_app.py  example_usage.md  industrial_sentinel.c  violation_demo.py
certiguard/scripts/: README.md  package_sdk.ps1  smoke_dashboard.py
certiguard/test_state_dir/: acme_license.lic  beta_license.lic  pow_heartbeat.json  request.cgreq  tampered_license.lic  valid_license.lic
certiguard/tests/: test_all_layers.py  test_antidebug.py  test_behavior_probe.py  test_honeypot_tripwire.py  test_integrity.py  test_license_watermark.py  test_obfuscation.py  test_pow_heartbeat.py
(+70 files in other folders)
