[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "certiguard-sdk"
version = "0.1.0"
description = "Offline-first on-premise software license protection SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=42.0.0",
  "psutil>=5.9.0",
  "scikit-learn>=1.4.0",
  "numpy>=1.26.0",
]

[project.scripts]
certiguard = "certiguard.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

